--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Areas/Identity/Pages/Account/Manage/PagePersonalOrders.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Areas/Identity/Pages/Account/Manage/PagePersonalOrders.cshtml
@@ -415,14 +415,14 @@
                                                     <div style="display: flex;gap: 50px;" id="bezalenMethod-@z">
                                                         <label>
                                                             <input type="radio" onchange="BezaleMethod(@z)" checked name="Pay" value="PayPall">
-                                                        <img src="@("/compression/paypal.png")" height="30" width="30" />
+                                                        <img src="@("/compression/paypal.webp")" height="30" width="30" />
                                                             <h4>PayPall</h4>
                                                         </label><br>                                                   
-                                                        <label>
+                                                      @*   <label>
                                                             <input type="radio" onchange="BezaleMethod(@z)" name="Pay" value="auf Rechnung">
                                                         <img src="@("/compression/cash-on-delivery.png")" height="40" width="40" />
                                                             <h4>auf Rechnung</h4>
-                                                        </label>
+                                                        </label> *@
                                                     </div>
                                                 </div>
 
