--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Shared/Components/Footer/Default.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Shared/Components/Footer/Default.cshtml
@@ -8,7 +8,7 @@
                 <div style="margin-top:20px">
                     @foreach (var t in Model.Basi)
                     {
-                        <li><a data-bs-toggle="modal" onclick="system_name('@t.NameSysteam','@t.Id')" data-bs-target="#FooterItemRender">@t.NameSysteam</a></li>
+                        <li><a data-bs-toggle="modal" id="footerItem" onclick="system_name('@t.NameSysteam','@t.Id')" data-bs-target="#FooterItemRender">@t.NameSysteam</a></li>
                     }
                 </div>
             </div>
@@ -18,7 +18,7 @@
                 <div style="margin-top:20px">
                     @foreach (var t in Model.Ces)
                     {
-                        <li><a data-bs-toggle="modal" onclick="system_name('@t.NameSysteam','@t.Id')" data-bs-target="#FooterItemRender">@t.NameSysteam</a></li>
+                        <li><a data-bs-toggle="modal" id="footerItem" onclick="system_name('@t.NameSysteam','@t.Id')" data-bs-target="#FooterItemRender">@t.NameSysteam</a></li>
                     }
                 </div>
             </div>
@@ -27,7 +27,7 @@
                 <div style="margin-top:20px">
                     @foreach (var t in Model.ABUS)
                     {
-                        <li><a data-bs-toggle="modal" onclick="system_name('@t.NameSysteam','@t.Id')" data-bs-target="#FooterItemRender">@t.NameSysteam</a></li>
+                        <li><a data-bs-toggle="modal" id="footerItem" onclick="system_name('@t.NameSysteam','@t.Id')" data-bs-target="#FooterItemRender">@t.NameSysteam</a></li>
                     }
                 </div>
             </div>
@@ -37,7 +37,7 @@
                 <div style="margin-top:20px">
                     @foreach (var t in Model.EVVA)
                     {
-                        <li><a data-bs-toggle="modal" onclick="system_name('@t.NameSysteam','@t.Id')" data-bs-target="#FooterItemRender">@t.NameSysteam</a></li>
+                        <li><a data-bs-toggle="modal" id="footerItem" onclick="system_name('@t.NameSysteam','@t.Id')" data-bs-target="#FooterItemRender">@t.NameSysteam</a></li>
                     }
                 </div>
             </div>
