--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_System.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_System.cshtml
@@ -220,6 +220,7 @@
 }
  @section Scripts
  {
+    <script src="~/lib/tinymce_7.1.2/tinymce/js/tinymce/tinymce.min.js"></script>
     <script>
 
          let Galery = document.getElementById("Galerry");
