--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Blogs.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Blogs.cshtml
@@ -1,6 +1,6 @@
 ﻿@model schliessanlagen_konfigurator.Models.Blog;
 @{
-    ViewData["Title"] = "Blogs";
+    ViewData["Title"] = "Blog";
     int i = -1;
 }
 
@@ -24,7 +24,7 @@
     }
 
     #Table{
-       grid-template-columns:repeat(4,auto)
+       grid-template-columns:repeat(3,auto)
     }
     .list-group-item.active {
         z-index: 2;
@@ -137,9 +137,6 @@
                         <div class="Thead">
                             <h5> Bearbeiten</h5>
                         </div>
-                        <div class="Thead">
-                            <h5>Optionen</h5>
-                        </div>
 
                         <div class="Thead">
                             <h5>Löschen</h5>
@@ -152,21 +149,17 @@
                             <div id="rowTable">@item.Name</div>
 
                             <div id="rowTable">
-                                <a href="@Url.Action("Edit_Doppelzylinder","Home", new { item.Id })">
+                                <a href="@Url.Action("Edit_Blog","Blog", new { item.Id })">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-edit"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M7 7h-1a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-1" /><path d="M20.385 6.585a2.1 2.1 0 0 0 -2.97 -2.97l-8.415 8.385v3h3l8.385 -8.415z" /><path d="M16 5l3 3" /></svg>
                                 </a>
                             </div>
                            
                             <div id="rowTable">
-                                <a href="@Url.Action("Delete_Doppelzylinder","Home", new { item.Id })">
+                                <a href="@Url.Action("Delete_Blog","Blog", new { item.Id })">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-file-x"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M14 3v4a1 1 0 0 0 1 1h4" /><path d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z" /><path d="M10 12l4 4m0 -4l-4 4" /></svg>
                                 </a>
                             </div>
-                            <div id="rowTable">
-                                <a href="@Url.Action("Index","Home", new { id = item.Id })">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-table-plus"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M12.5 21h-7.5a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v7.5" /><path d="M3 10h18" /><path d="M10 3v18" /><path d="M16 19h6" /><path d="M19 16v6" /></svg>
-                                </a>
-                            </div>
+                          
                         }
                     </div>
                 </div>
