--- a/schliessanlagen-konfigurator/publish/wwwroot/css/site.css
+++ b/schliessanlagen-konfigurator/publish/wwwroot/css/site.css
@@ -14,6 +14,14 @@
     gap: 20px;
     text-align: center;
 }
+#alertBox {
+    position: fixed;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1050;
+    width: 90%
+}
 #footerItem{
     cursor:pointer;
 }
@@ -993,10 +1001,7 @@ html, body {
         display: grid;
         grid-template-columns: repeat(9, auto);
     }
-    #Table3 {
-        display: grid;
-        grid-template-columns: repeat(6, auto);
-    }
+
     #routBAR {
         display: grid;
         grid-template-columns: repeat(6, auto);
@@ -1660,10 +1665,7 @@ html, body {
         display: grid;
         grid-template-columns: repeat(9,auto);
     }
-    #Table3 {
-        display: grid;
-        grid-template-columns: repeat(6, auto);
-    }
+   
     #Table2 {
         display: grid;
         grid-template-columns: repeat(9,auto);
@@ -2620,10 +2622,6 @@ html, body {
     #Table {
         display: grid;
         grid-template-columns: repeat(9,auto);
-    }
-    #Table3 {
-        display: grid;
-        grid-template-columns: repeat(6, auto);
     }
     #Table2 {
         display: grid;
