--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_System.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_System.cshtml
@@ -11,10 +11,14 @@
 @if (User.IsInRole("admin"))
 {
     <h1>@ViewData["Title"]</h1>
+    <div id="alertBox" class="alert alert-success d-none alert-dismissible fade" role="alert" >
+        <span id="alertMessage">Die Daten wurden erfolgreich gespeichert!</span>
+        <button type="button" class="btn-close" aria-label="Close" onclick="closeAlert()"></button>
+    </div>
     <hr />
     <div class="row">
         <div class="col-md-12">
-            <form asp-action="SaveSysteamInfo" enctype="multipart/form-data">
+            <form asp-action="SaveSysteamInfo" id="systemInfoForm" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
                     <label>Systemname</label>
@@ -212,16 +216,72 @@
                
                 <input value="@Model.NameSysteam" type="hidden" name="AltName" class="form-control" />
                 <hr />
-               
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="button" onclick="goBack()" value="Close" class="btn danger" />
+                <input type="submit" id="saveButton" value="Save" class="btn btn-primary" />
             </form>
+           
         </div>
     </div>
 }
  @section Scripts
  {
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="~/lib/tinymce_7.1.2/tinymce/js/tinymce/tinymce.min.js"></script>
     <script>
+
+        function goBack() {
+            if (document.referrer !== "") {
+                window.location.href = document.referrer;  // Возвращаемся на предыдущую страницу
+            } else {
+                window.history.back();  // Если реферера нет, используем history.back()
+            }
+        }
+        
+        function showAlert(message) {
+            const alertBox = document.getElementById('alertBox');
+            const alertMessage = document.getElementById('alertMessage');
+
+            alertMessage.innerText = message;  // Установка сообщения
+            alertBox.classList.remove('d-none');  // Удалить класс d-none
+            alertBox.classList.add('show'); // Добавить класс show для отображения
+        }
+
+    
+        function closeAlert() {
+            const alertBox = document.getElementById('alertBox');
+            alertBox.classList.remove('show');  // Удалить класс show
+            alertBox.classList.add('d-none');  // Добавить класс d-none для скрытия
+        }
+
+        document.getElementById('saveButton').addEventListener('click', function (event) {
+            
+            event.preventDefault();
+            
+            tinymce.triggerSave();
+            var form = document.getElementById('systemInfoForm');
+
+            var formData = new FormData(form);
+
+            axios.post('/Home/SaveSysteamInfo', formData, {
+                headers: {
+                    'Content-Type': 'multipart/form-data'
+                }
+            })
+                .then(function (response) {
+                    const alertBox = document.getElementById('alertBox');
+                    alertBox.classList.remove('alert-danger');
+                    alertBox.classList.add('alert-success');
+                    showAlert(response.data.message);
+                })
+                .catch(function (error) {
+                    const alertBox = document.getElementById('alertBox');
+                    alertBox.classList.remove('alert-success');
+                    alertBox.classList.add('alert-danger');
+                    showAlert(error);
+                });
+        });
+
+      
 
          let Galery = document.getElementById("Galerry");
 
@@ -402,9 +462,30 @@
 
             let blockCounter = document.querySelectorAll('.input-block').length > 0 ? document.querySelectorAll('.input-block').length : 1;
 
+
+            function creatDescription(value) {
+                tinymce.init({
+                    selector: `#exampleFormControlTextareaS${value}`,
+                    plugins: [
+                        'advlist', 'autolink', 'link', 'image', 'lists', 'charmap', 'preview', 'anchor', 'pagebreak',
+                        'searchreplace', 'wordcount', 'visualblocks', 'visualchars', 'code', 'fullscreen', 'insertdatetime',
+                        'media', 'table', 'emoticons', 'help'
+                    ],
+                    toolbar: 'undo redo | styles | bold italic | alignleft aligncenter alignright alignjustify | ' +
+                        'bullist numlist outdent indent | link image | print preview media fullscreen | ' +
+                        'forecolor backcolor emoticons | help',
+                    menu: {
+                        favs: { title: 'Discriptions', items: 'code visualaid | searchreplace | emoticons' }
+                    },
+                    menubar: 'favs file edit view insert format tools table help',
+                    content_css: 'css/content.css'
+                });
+            }
+
             createBlockBtn.addEventListener('click', function () {
                 const block = createBlock();
                 container.appendChild(block);
+                creatDescription(blockCounter - 1);
             });
 
             addInputBtn.addEventListener('click', function () {
@@ -465,11 +546,14 @@
                                                                                                             <p></p>
                                                                                                         </div>
                                                                                                         <label>Descriptions</label>
-                                                                                                        <input class="form-control" type="text" name="Descriptions" />
+                                                                                                            <textarea name="Descriptions" id="exampleFormControlTextareaS${blockCounter}" class="form-control">
+                                                                                                                 
+                                                                                                            </textarea>
+                                                                                                       
                                                                                                         <h1>Value & Cost </h1>
                                                                                                         <div id="Aussen_Innen_ProfilDopel">
                                                                                                             <div id="valueNGF">
-                                                                                                                                    <input type="text" class="form-control" placeholder="Wert" name="value" />
+                                                                                                                <input type="text" class="form-control" placeholder="Wert" name="value" />
 
                                                                                                             </div>
                                                                                                             <div id="costNGF">
@@ -513,9 +597,10 @@
                                                                                                     `;
 
                 blockCounter++;
-
                 return block;
             }
+
+           
 
             function addInputs(block) {
 
