--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/SystemInfo.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/SystemInfo.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿
+@{
     ViewData["Title"] = "SystemInfo";
 }
 <style>
@@ -77,53 +78,231 @@
 </div>
 <div>
     <h1>@ViewData["Title"]</h1>
+      <div id="alertBox" class="alert alert-success d-none alert-dismissible fade" role="alert" >
+        <span id="alertMessage">Die Daten wurden erfolgreich gespeichert!</span>
+        <button type="button" class="btn-close" aria-label="Close" onclick="closeAlert()"></button>
+    </div>
+</div>
+    <form asp-action="Create_Sys" id="systemInfoForm" enctype="multipart/form-data" asp-controller="Home">
 
-    <form asp-action="Create_Sys" enctype="multipart/form-data" asp-controller="Home">
-
-        <div>
+        @if (ViewBag.SystemChois != null)
+        {
+             <div>
             <label for="Images">Bilder auswählen:</label>
-            <input type="file" name="Images" multiple class="form-control" />
-        </div>
+            <input type="file" name="Images" value=""   multiple class="form-control" />
+            </div>
 
-    <div style="margin-bottom: 50px;margin-top: 50px">
-     <label>Systemname</label>
-    <input name="KeyName" id="NameSys" type="text" class="form-control" />
-    </div>
+            <div style="margin-bottom: 50px;margin-top: 50px">
+             <label>Systemname</label>
+            <input name="KeyName" id="NameSys" value="@ViewBag.SystemChois.NameSysteam" type="text" class="form-control" />
+            </div>
 
-    <div style="margin-bottom: 50px;">
-    <label>Schlüsselkosten</label>
-    <input name="KeyCost" type="number" step="0,1" min="0" class="form-control" />
-    </div>
-    <button>System erstellen</button>
+            <div style="margin-bottom: 50px;">
+            <label>Schlüsselkosten</label>
+            <input name="KeyCost" type="number" value="@ViewBag.SystemChois.Price" step="0,1" min="0" class="form-control" />
+            </div>
+            <input type="hidden" name="coppy" value="true" />
+                <input type="hidden" name="coppyId" value="@ViewBag.SystemChois.Id"  />
+        }
+        else
+        {
+                     <div>
+                    <label for="Images">Bilder auswählen:</label>
+                    <input type="file" name="Images" multiple class="form-control" />
+                </div>
+
+            <div style="margin-bottom: 50px;margin-top: 50px">
+             <label>Systemname</label>
+            <input name="KeyName" id="NameSys" type="text" class="form-control" />
+            </div>
+
+            <div style="margin-bottom: 50px;">
+            <label>Schlüsselkosten</label>
+            <input name="KeyCost" type="number" step="0,1" min="0" class="form-control" />
+            </div>
+        }
+       
+    <button class="btn danger" id="submitForm">System erstellen</button>
     </form>
 
-    @using (Html.BeginForm("EditSystem", "Home", FormMethod.Get))
-    {
-        <table class="table table-bordered table-sm">
-            <tbody>
-                <tr id="Table3">
-                    <th>NameSysteam</th>
-                    <th>Price</th>
-                    <th>Lieferzeit</th>
-                    <th>LieferzeitGrosse</th>
-                    <th>Bearbeiten</th>
-                    <th>Löschen</th>
-                    @foreach (var item in ViewBag.item)
-                    {
-                        <td id="rowTable " class="table-info"><h6 >@item.NameSysteam</h6></td>
-                        <td id="rowTable " class="table-info"><h6 id="cost">@item.Price.ToString("C")</h6></td>
-                        <td id="rowTable " class="table-info"><h6 >@item.Lieferzeit</h6></td>
-                        <td id="rowTable " class="table-info"><h6>@item.LieferzeitGrosse</h6></td>
-                        <td id="rowTable" class="table-info"><a href="@Url.Action("Edit_System","Home", new { id = item.Id })">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-edit"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M7 7h-1a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-1" /><path d="M20.385 6.585a2.1 2.1 0 0 0 -2.97 -2.97l-8.415 8.385v3h3l8.385 -8.415z" /><path d="M16 5l3 3" /></svg>
-                            </a></td>
-                        
-                            <td id="rowTable" class="table-info"><a href="@Url.Action("Delete_System","Home", new { item.Id })">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-file-x"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M14 3v4a1 1 0 0 0 1 1h4" /><path d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z" /><path d="M10 12l4 4m0 -4l-4 4" /></svg>
-                            </a></td>
-                    }
+  @using (Html.BeginForm("EditSystem", "Home", FormMethod.Get))
+{
+    <table class="table table-bordered table-sm" id="Table3" >
+        <thead>
+            <tr>
+                <th>NameSysteam</th>
+                <th>Price</th>
+                <th>Lieferzeit</th>
+                <th>LieferzeitGrosse</th>
+                <th>Bearbeiten</th>
+                <th>Löschen</th>
+                <th>Vorlage</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in ViewBag.item)
+            {
+                <tr>
+                    <td><h6>@item.NameSysteam</h6></td>
+                    <td><h6>@item.Price.ToString("C")</h6></td>
+                    <td><h6>@item.Lieferzeit</h6></td>
+                    <td><h6>@item.LieferzeitGrosse</h6></td>
+                    <td>
+                        <a href="@Url.Action("Edit_System", "Home", new { id = item.Id })">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-edit">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                <path d="M7 7h-1a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-1" />
+                                <path d="M20.385 6.585a2.1 2.1 0 0 0 -2.97 -2.97l-8.415 8.385v3h3l8.385 -8.415z" />
+                                <path d="M16 5l3 3" />
+                            </svg>
+                        </a>
+                    </td>
+                    <td>
+                        <a href="@Url.Action("Delete_System", "Home", new { id = item.Id })">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-file-x">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                <path d="M14 3v4a1 1 0 0 0 1 1h4" />
+                                <path d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z" />
+                                <path d="M10 12l4 4m0 -4l-4 4" />
+                            </svg>
+                        </a>
+                    </td>
+                    <td>
+                        <a href="@Url.Action("SystemInfo", "Home", new { id = item.Id })">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-table-plus">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                <path d="M12.5 21h-7.5a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v7.5" />
+                                <path d="M3 10h18" />
+                                <path d="M10 3v18" />
+                                <path d="M16 19h6" />
+                                <path d="M19 16v6" />
+                            </svg>
+                        </a>
+                    </td>
                 </tr>
-            </tbody>
-        </table>
-    }
+            }
+        </tbody>
+    </table>
+}
 </div>
+@section scripts
+{
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    
+    <script type="text/javascript">
+
+
+            function updateTable(data) {
+            var tableBody = document.querySelector('#Table3 tbody'); // Находим tbody
+
+            // Очищаем текущие строки таблицы
+            tableBody.innerHTML = '';
+
+            // Проходим по всем данным и добавляем их в таблицу
+            data.forEach(function(item) {
+                var row = document.createElement('tr');
+
+                // Создаем ячейки и добавляем данные
+                var cellName = document.createElement('td');
+                cellName.innerHTML = '<h6>' + item.nameSysteam + '</h6>';
+                row.appendChild(cellName);
+
+                var cellPrice = document.createElement('td');
+                cellPrice.innerHTML = '<h6>' + item.price.toFixed(2) + ' €' + '</h6>';
+                row.appendChild(cellPrice);
+
+                var cellLieferzeit = document.createElement('td');
+                cellLieferzeit.innerHTML = '<h6>' + item.lieferzeit + '</h6>';
+                row.appendChild(cellLieferzeit);
+
+                var cellLieferzeitGrosse = document.createElement('td');
+                cellLieferzeitGrosse.innerHTML = '<h6>' + item.lieferzeitGrosse + '</h6>';
+                row.appendChild(cellLieferzeitGrosse);
+
+                // Кнопка редактирования
+                var cellEdit = document.createElement('td');
+                    cellEdit.innerHTML = '<a href="/Home/Edit_System?id=' + item.id + '">  <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-edit"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M7 7h-1a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-1" /><path d="M20.385 6.585a2.1 2.1 0 0 0 -2.97 -2.97l-8.415 8.385v3h3l8.385 -8.415z" /><path d="M16 5l3 3" /></svg></a>';
+                row.appendChild(cellEdit);
+
+                // Кнопка удаления
+                var cellDelete = document.createElement('td');
+                cellDelete.innerHTML = '<a href="/Home/Delete_System?id=' + item.id + '"> <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-file-x"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M14 3v4a1 1 0 0 0 1 1h4" /><path d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z" /><path d="M10 12l4 4m0 -4l-4 4" /></svg></a>';
+                row.appendChild(cellDelete);
+
+                // Кнопка "Vorlage"
+                var cellVorlage = document.createElement('td');
+                cellVorlage.innerHTML = '<a href="/Home/SystemInfo?id=' + item.id + '"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-table-plus"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M12.5 21h-7.5a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v7.5" /><path d="M3 10h18" /><path d="M10 3v18" /><path d="M16 19h6" /><path d="M19 16v6" /></svg></a>';
+                row.appendChild(cellVorlage);
+
+                // Добавляем строку в таблицу
+                tableBody.appendChild(row);
+            });
+        }
+
+         
+
+        // Функция для запроса на сервер и обновления данных таблицы
+        function refreshTable() {
+            axios.get('/Home/GetUpdatedSystems')
+                .then(function(response) {
+                    // Получаем данные с сервера
+                    var data = response.data;
+
+                    // Обновляем таблицу
+                    updateTable(data);
+                })
+                .catch(function(error) {
+                    console.error('Error fetching data:', error);
+                });
+        }
+
+          function showAlert(message) {
+            const alertBox = document.getElementById('alertBox');
+            const alertMessage = document.getElementById('alertMessage');
+
+            alertMessage.innerText = message;  // Установка сообщения
+            alertBox.classList.remove('d-none');  // Удалить класс d-none
+            alertBox.classList.add('show'); // Добавить класс show для отображения
+        }
+
+    
+        function closeAlert() {
+            const alertBox = document.getElementById('alertBox');
+            alertBox.classList.remove('show');  // Удалить класс show
+            alertBox.classList.add('d-none');  // Добавить класс d-none для скрытия
+        }
+
+
+        document.getElementById('submitForm').addEventListener('click', function (event) {
+        event.preventDefault(); 
+
+        var form = document.getElementById('systemInfoForm');
+
+        var formData = new FormData(form);
+
+        axios.post('/Home/Create_Sys', formData, {
+            headers: {
+                'Content-Type': 'multipart/form-data'
+            }
+        })
+        .then(function (response) {
+
+          const alertBox = document.getElementById('alertBox');
+                    alertBox.classList.remove('alert-danger');
+                    alertBox.classList.add('alert-success');
+                    showAlert(response.data.message);
+
+        refreshTable();
+
+        })
+        .catch(function (error) {
+            
+                  const alertBox = document.getElementById('alertBox');
+                        alertBox.classList.remove('alert-success');
+                        alertBox.classList.add('alert-danger');
+                        showAlert(error);
+        });
+    });
+    
+    </script>
+}
