--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Aussenzylinder_Rundzylinder.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Aussenzylinder_Rundzylinder.cshtml
@@ -209,7 +209,9 @@
             }
 
             document.getElementById('submitForm').addEventListener('click', function (event) {
+               
                 event.preventDefault();
+                tinymce.triggerSave();
 
                 var form = document.getElementById('systemInfoForm');
 
