--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Doppelzylinder.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Doppelzylinder.cshtml
@@ -1,14 +1,13 @@
 ﻿@model schliessanlagen_konfigurator.Models.ProfilDopelZylinder.Profil_Doppelzylinder;
 
 @{
-    var kleinAussen = ViewBag.KleinAussen;
     ViewData["Title"] = $"Edit/{Model.Id}";
     int count = -1;
     int f = -1;
     int r = -1;
     int galeryCheker = 0;
-    var resultAussen = (kleinAussen != null) ? kleinAussen.aussen : 0;
-    var resultPreis = (kleinAussen != null) ? kleinAussen.costSizeAussen : 0;
+    
+    
 }
 
 <style>
@@ -147,7 +146,7 @@
                         <div id="galeryItem-@galeryCheker">
                             <input name="GalleryImages" type="text" value="@list.ImageName" id="opt" class="form-control" />
                             <br />
-                            <img src="@("/Image/"+@list.ImageName)" height="300" width="300" />
+                            <img src="@("/compression/"+@list.ImageName)" height="300" width="300" />
                             <br />
                             <button class="btn btn-success" onclick="AddImage(@galeryCheker)" type="button">Bilder hinzufügen</button>
                             <button class="btn btn-danger" onclick="deleteImage(@galeryCheker)" type="button">Löschen</button>
@@ -221,43 +220,59 @@
                       <div>
                             <h5>Für zylinder aussen klein</h5>
                         </div>
-                        <div id="kleinGrose">
-                            <div>
-                                <div>
-                                    <h5>Aussen</h5>
-                                <input type="number" class="form-control" value="@resultAussen" name="ausKlein" />
-                                </div>
-                                <div>
-                                    <h5>Preis</h5>
-                                <input type="number" class="form-control" step="0,00" value="@resultPreis" name="ausKleinPreis" />
-                                </div>
-                            </div>
-                            <div class="arrow-right">
-                            </div>
-                            <div>
-                                <table class="table">
-                                    <thead>
-                                        <tr>
-                                            <th>Wert</th>
-                                            <th>Preis</th>
-                                            <th><button type="button" onclick="PlusKleinIntert()" class="btn btn-success">+</button><button type="button" class="btn danger" onclick="MinusKleinIntern()">-</button></th>
-                                        </tr>
-                                    </thead>
-                                    <tbody id="kleiIntern">
-                                       
-                                        @foreach (var list in ViewBag.DoppelKleinSize)
-                                        {
-                                            <tr>
-                                            <th><input name="internDoppelKlein" class="form-control" value="@list.Intern" type="number" step="0,01" /></th>
-                                            <td><input name="priesDoppelKlein" class="form-control" type="number" value="@list.costSizeIntern" step="0,01" /></td>
-                                            </tr>
-                                        }
-                                        
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
+                        @if (ViewBag.KleinAussen != null)
+                        {
+                            int countKleinZise = 1;
 
+                            @for (int i = 0;i < ViewBag.KleinAussen.Count;i++)
+                            {
+                                int countItem = 0;
+                                var kleinAussen = ViewBag.KleinAussen[i];
+                                var resultAussen = (kleinAussen != null) ? kleinAussen.aussen : 0;
+                                var resultPreis = (kleinAussen != null) ? kleinAussen.costSizeAussen : 0;
+
+                                <div id="kleinGrose" class="kleinZise-@countKleinZise">
+                                    <div>
+                                        <div>
+                                            <h5>Aussen</h5>
+                                            <input type="number" class="form-control" value="@resultAussen" name="ausKlein" />
+                                        </div>
+                                        <div>
+                                            <h5>Preis</h5>
+                                            <input type="number" class="form-control" step="0,00" value="@resultPreis" name="ausKleinPreis" />
+                                        </div>
+                                    </div>
+                                    <div class="arrow-right">
+                                    </div>
+                                    <div>
+                                        <table class="table">
+                                            <thead>
+                                                <tr>
+                                                    <th>Wert</th>
+                                                    <th>Preis</th>
+                                                    <th><button type="button" onclick="PlusKleinIntert('@countKleinZise')" class="btn btn-success">+</button><button type="button" class="btn danger" onclick="MinusKleinIntern('@countKleinZise')">-</button></th>
+                                                </tr>
+                                            </thead>
+                                            <tbody id="kleiIntern">
+                                               
+                                                @foreach (var list in kleinAussen.Doppel_Innen_klein)
+                                                {
+                                                    <tr>
+                                                        <th><input name="internDoppelKlein" id="interKlein" class="form-control" value="@list.Intern" type="number" step="0,01" /></th>
+                                                        <td><input name="priesDoppelKlein" class="form-control" type="number" value="@list.costSizeIntern" step="0,01" /></td>
+                                                    </tr>
+                                                    countItem++;
+                                                }
+                                            </tbody>
+                                        </table>
+                                        <input type="hidden" name="KleinZiseCount" value="@countItem" id="KleinZiseCount" />
+                                    </div>
+                                </div>
+                                countKleinZise++;
+                            }
+                        }
+                                              
+                        <button type="button" onclick="newKlein()"  class="btn danger">Create New Size</button>
                     </div>
                 
                 <div id="productOptions">
@@ -337,8 +352,64 @@
         @{
             await Html.RenderPartialAsync("_ValidationScriptsPartial");
         }
-
         <script>
+
+            let countKleinBlock = 1;
+
+            function newKlein()
+            {
+
+                let Aussen_innen_klein = document.getElementById("Aussen_innen_klein");
+                
+                countKleinBlock++;
+
+                let block = ` <div id="kleinGrose" class="kleinZise-${countKleinBlock}">
+                                        <div>
+                                            <div>
+                                                <h5>Aussen</h5>
+                                            <input type="number" class="form-control" value="" name="ausKlein" />
+                                            </div>
+                                            <div>
+                                                <h5>Preis</h5>
+                                            <input type="number" class="form-control" step="0,00" value="" name="ausKleinPreis" />
+                                            </div>
+                                        </div>
+                                        <div class="arrow-right">
+                                        </div>
+                                        <div>
+                                            <table class="table">
+                                                <thead>
+                                                    <tr>
+                                                        <th>Wert</th>
+                                                        <th>Preis</th>
+                                                             <th><button type="button" onclick="PlusKleinIntert(${countKleinBlock})" class="btn btn-success">+</button><button type="button" class="btn danger" onclick="MinusKleinIntern(${countKleinBlock})">-</button></th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody id="kleiIntern">
+
+
+                                                            <tr>
+                                                            <th><input name="internDoppelKlein" class="form-control" value="" type="number" step="0,01" /></th>
+                                                            <td><input name="priesDoppelKlein" class="form-control" type="number" value="" step="0,01" /></td>
+                                                            </tr>         
+                                                </tbody>
+                                            </table>
+                                                        <input type="hidden" name="KleinZiseCount"  />
+                                        </div>
+                                    </div>`;
+
+                Aussen_innen_klein.innerHTML += block;
+
+                let blockItem = document.querySelector(`.kleinZise-${countKleinBlock}`);
+
+                let tableSearch = blockItem.childNodes[5].childNodes[1].childNodes[3];
+
+                let count = tableSearch.querySelectorAll('input[type="number"]').length;
+
+                let countValue = blockItem.childNodes[5].childNodes[3];
+
+                countValue.value = count / 2;
+            }
 
             function goBack() {
                 if (document.referrer !== "") {
@@ -365,7 +436,9 @@
             }
 
             document.getElementById('submitForm').addEventListener('click', function (event) {
+               
                 event.preventDefault();
+                tinymce.triggerSave();
 
                 var form = document.getElementById('systemInfoForm');
 
@@ -393,29 +466,48 @@
                     });
             });
 
-            let table = document.getElementById("kleiIntern");
 
-            function PlusKleinIntert() {
+            function PlusKleinIntert(blockNumber) 
+            {
+
+                let block = document.querySelector(`.kleinZise-${blockNumber}`);
+                let tableSearch = block.childNodes[5].childNodes[1].childNodes[3];
+             
                 let row = `   <tr>
                                         <th><input name="internDoppelKlein" class="form-control" type="number" step="0,01" /></th>
                                            <td><input class="form-control" name="priesDoppelKlein" step="0,01" type="number" /></td>
                                 </tr> `;
 
-                table.insertAdjacentHTML('beforeend', row);
+                tableSearch.insertAdjacentHTML('beforeend', row);
+
+                let count = tableSearch.querySelectorAll('input[type="number"]').length;
+
+                let countValue = block.childNodes[5].childNodes[3];
+
+                countValue.value = count / 2;
             }
 
-            function MinusKleinIntern() 
+            function MinusKleinIntern(blockNumber) 
             {
-                let countelem = table.querySelectorAll("tr");
+                let block = document.querySelector(`.kleinZise-${blockNumber}`);
 
-                let kleinSize = document.getElementById("Aussen_innen_klein");
+                let tableSearch = block.childNodes[5].childNodes[1].childNodes[3];
+
+                let countelem = tableSearch.querySelectorAll("tr");
 
                 if (countelem.length == 0) {
-                    kleinSize.remove();
+                    block.remove();
                 }
                 else {
                     countelem[countelem.length - 1].remove();
                 }
+
+
+                let count = tableSearch.querySelectorAll('input[type="number"]').length;
+
+                let countValue = block.childNodes[5].childNodes[3];
+
+                countValue.value = count / 2;
             }
 
             let Galery = document.getElementById("Galerry");
