--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Hebel.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Hebel.cshtml
@@ -210,7 +210,9 @@
             }
 
             document.getElementById('submitForm').addEventListener('click', function (event) {
+
                 event.preventDefault();
+                tinymce.triggerSave();
 
                 var form = document.getElementById('systemInfoForm');
 
