--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Profil_Halbzylinder.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Profil_Halbzylinder.cshtml
@@ -221,7 +221,9 @@
             }
 
             document.getElementById('submitForm').addEventListener('click', function (event) {
+              
                 event.preventDefault();
+                tinymce.triggerSave();
 
                 var form = document.getElementById('systemInfoForm');
 
