--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Profil_Knaufzylinder.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Profil_Knaufzylinder.cshtml
@@ -278,7 +278,9 @@
         }
 
         document.getElementById('submitForm').addEventListener('click', function (event) {
+           
             event.preventDefault();
+            tinymce.triggerSave();
 
             var form = document.getElementById('systemInfoForm');
 
