--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Vorhangschloss.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Vorhangschloss.cshtml
@@ -216,7 +216,9 @@
             }
 
             document.getElementById('submitForm').addEventListener('click', function (event) {
+               
                 event.preventDefault();
+                tinymce.triggerSave();
 
                 var form = document.getElementById('systemInfoForm');
 
