--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Aussenzylinder_RundzylinderRout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Aussenzylinder_RundzylinderRout.cshtml
@@ -168,8 +168,8 @@
                             </div>
 
                             <div>
-                                <label>Beschreibungen</label>
-                                <textarea class="form-control" id="exampleFormControlTextarea1">@ViewBag.AussenZyl.description</textarea>
+                              <label>Beschreibungen</label>
+                                  <textarea class="form-control" name="description" id="exampleFormControlTextarea1">@ViewBag.AussenZyl.description</textarea>
                             </div>
                             
 
