--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
@@ -168,7 +168,7 @@
 
                                 <div>
                                     <h5>Beschreibungen</h5>
-                                    <textarea  class="form-control" id="exampleFormControlTextarea1">@ViewBag.Dopple.description</textarea>
+                                    <textarea class="form-control" name="description" id="exampleFormControlTextarea1">@ViewBag.Dopple.description</textarea>
                                 </div>
                              
                                 <div>
