--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Profil_KnaufzylinderRout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Profil_KnaufzylinderRout.cshtml
@@ -175,7 +175,7 @@
 
                             <div>
                                     <h5>Beschreibungen</h5>
-                                <textarea class="form-control" id="exampleFormControlTextarea1">@ViewBag.Knayf.description</textarea>
+                                    <textarea class="form-control" name="description" id="exampleFormControlTextarea1">@ViewBag.Knayf.description</textarea>
                             </div>
 
                             <div>
