--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/Finisher.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/Finisher.cshtml
@@ -1113,6 +1113,8 @@
     let kleinPrice = @Html.Raw(ViewBag.DopelzylinderInternKleinPreis)|| null;
     let normalDopelSize = @Html.Raw(ViewBag.DopelzylinderInternNormal)|| null;
     let kleinSize = @Html.Raw(ViewBag.DopelzylinderInternKlein)|| null;
+    let kleinCountItem = @Html.Raw(ViewBag.CountDoppelInter)|| null;
+
 
     let priceDoppelInternCost = @Html.Raw(ViewBag.CostDoppelIntern);
     let priceDoppelAussenCost = @Html.Raw(ViewBag.CostDoppelAussen);
