--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/VorhangschlossRout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/VorhangschlossRout.cshtml
@@ -167,7 +167,7 @@
 
                             <div >
                                 <label>Beschreibungen</label>
-                                <textarea class="form-control" id="exampleFormControlTextarea1">@ViewBag.Vorhang.description</textarea>
+                                    <textarea class="form-control" name="description" id="exampleFormControlTextarea1">@ViewBag.Vorhang.description</textarea>
                             </div>
                            
                             <div>
@@ -366,7 +366,7 @@
                                 </a>
                             </div>
                             <div id="rowTable">
-                                <a href="@Url.Action("Delete_Vorha","Home", new { item.Id })">
+                                <a href="@Url.Action("Delete_Vorhan","Home", new { item.Id })">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-file-x"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M14 3v4a1 1 0 0 0 1 1h4" /><path d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z" /><path d="M10 12l4 4m0 -4l-4 4" /></svg>
                                 </a>
                             </div>
